hard-gists/2e466ff4e6b3425aba3c/run.log
=== Docker Run Log for 2e466ff4e6b3425aba3c ===
Started at: Mi 29. Okt 13:31:46 CET 2025

[2025-10-29 13:31:46] START: Running container for 2e466ff4e6b3425aba3c
[2025-10-29 13:31:47] SUCCESS: Container 34571109c4ee71cf9189a6578a9a5bd894f6d9c5ee3bc5de657c969ba259c33e started for 2e466ff4e6b3425aba3c
=== Container logs for 2e466ff4e6b3425aba3c ===
  File "/snippet.py", line 21
    print "Creating final image..."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2e466ff4e6b3425aba3c ===
[2025-10-29 13:31:49] INFO: Container 34571109c4ee71cf9189a6578a9a5bd894f6d9c5ee3bc5de657c969ba259c33e has stopped
